<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
<name>thermal_tc001</name>
<version>0.0.0</version>
<description>ROS 2 Node for capturing and processing TC001 thermal camera data using OpenCV.</description>
<maintainer email="ygao@mst.edu">spotbot</maintainer>
<license>Apache-2.0</license>

<exec_depend>rclpy</exec_depend>
<exec_depend>sensor_msgs</exec_depend>
<exec_depend>cv_bridge</exec_depend>
<exec_depend>python3-opencv</exec_depend>

<export>
  <build_type>ament_python</build_type>
</export>
</package>